<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- CURRENCY -->
    <string name="currency_euros">€</string>
    <string name="currency_dollars">$</string>

    <!-- list of type of property -->
    <string name="property_type_adapter_helper_villa">Villa</string>
    <string name="property_type_adapter_helper_estate">Estate</string>
    <string name="property_type_adapter_helper_manor">Manor</string>
    <string name="property_type_adapter_helper_apartment">Apartment</string>
    <string name="property_type_adapter_helper_loft">Loft</string>
    <string name="property_type_adapter_helper_penthouse">Penthouse</string>


    <!-- fragment_estate_list_view -->
    <string name="estate_list_view_text">No Property for the moment</string>
    <string name="item_estate_fragment_listview_title_textview">TYPE</string>
    <string name="item_estate_fragment_listview_cityname_textview">CITY</string>
    <string name="item_estate_fragment_listview_price_textview">1000</string>
    <string name="item_estate_fragment_listview_currency_textview">$</string>
    <string name="item_estate_fragment_listview_issold_textview">S O L D ! </string>

    <!-- fragment_estate_detail_view -->
    <string name="estate_detail_fragment_title_textview">House</string>
    <string name="estate_detail_fragment_is_sold_textview">"The property was sold on "</string>
    <string name="estate_detail_fragment_cityname_textview">City</string>
    <string name="estate_detail_fragment_price_textview">500000</string>
    <string name="estate_detail_fragment_description_title_textview">Description</string>
    <string name="estate_detail_fragment_description_text_textview">blablabla</string>
    <string name="estate_detail_fragment_information_title_textview">Informations</string>
    <string name="estate_detail_fragment_type_textview">Type</string>
    <string name="estate_detail_fragment_surface_textview">200 m2</string>
    <string name="estate_detail_fragment_number_rooms_textview">10 rooms</string>
    <string name="estate_detail_fragment_number_bedrooms_textview">3 bedrooms</string>
    <string name="estate_detail_fragment_number_bathrooms_textview">3 bathrooms</string>
    <string name="estate_detail_fragment_interest_title_textview">Interest point</string>
    <string name="estate_detail_fragment_address_title_textview">Location</string>
    <string name="estate_detail_fragment_address_of_property">Address</string>
    <string name="estate_detail_fragment_city_of_property">City</string>
    <string name="estate_detail_fragment_country_of_property">Country</string>
    <string name="estate_detail_fragment_no_permission_to_photos_from_device">You have not authorized access to the photos</string>

    <!-- drawer menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login activity -->
    <string name="title_activity_login">Real Estate Manager</string>
    <string name="login_title_real_estate_manager_textview">Real Estate Manager</string>
    <string name="login_activity_username">Username</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_login_button">Log in</string>
    <string name="login_activity_signup">No account ? Sign up here !</string>

    <!-- Add Estate Activity -->
    <string name="add_estate_activity_title">Add Real Estate</string>
    <string name="add_estate_activity_type_property">Type</string>
    <string name="add_estate_activity_price_of_property">Price $</string>
    <string name="add_estate_activity_title_of_property">Title</string>
    <string name="add_estate_activity_agent_name">Name</string>
    <string name="add_estate_activity_number_of_rooms">Rooms</string>
    <string name="add_estate_activity_number_of_bedrooms">Bedrooms</string>
    <string name="add_estate_activity_number_of_bathrooms">Bathrooms</string>
    <string name="add_estate_activity_checkbox_schools">Schools</string>
    <string name="add_estate_activity_checkbox_restaurants">Foods</string>
    <string name="add_estate_activity_checkbox_shops">Shops</string>
    <string name="add_estate_activity_checkbox_buses">Buses</string>
    <string name="add_estate_activity_checkbox_tramway">Tramway</string>
    <string name="add_estate_activity_checkbox_park">Park</string>
    <string name="add_estate_activity_surface_of_property">Surface m2</string>
    <string name="add_estate_activity_description">Description</string>
    <string name="add_estate_activity_address_of_property">Address</string>
    <string name="add_estate_activity_take_photography_button">Camera</string>
    <string name="add_estate_activity_take_image_from_gallery_button">Browse</string>
    <string name="add_estate_activity_postal_code_of_property">City</string>
    <string name="add_estate_activity_country_of_property">Country</string>
    <string name="add_estate_activity_dialog_add_title">Name of the picture</string>
    <string name="add_estate_activity_dialog_add_add_button">Add</string>
    <string name="add_estate_activity_dialog_add_cancel_button">Cancel</string>
    <string name="add_estate_activity_dialog_add_ok_button">OK</string>
    <string name="add_estate_activity_dialog_add_error_title">Error</string>
    <string name="add_estate_activity_dialog_add_error_message">Please, enter a name for the picture.</string>
    <string name="add_estate_activity_dialog_save_error_title">Error</string>
    <string name="add_estate_activity_dialog_save_error_message">You must fill all the fields</string>
    <string name="add_estate_activity_storage_permission">We need permission to access your storage for selecting images.</string>
    <string name="add_estate_activity_dialog_add_success_title">Success</string>
    <string name="add_estate_activity_dialog_add_success_message">You\'ve saved with success</string>

    <!-- Add Estate Photo Adapter -->
    <string name="add_estate_photo_adapter_dialog_edit_title">Change the name for the picture</string>
    <string name="add_estate_photo_adapter_dialog_edit_validate_button">Validate</string>
    <string name="add_estate_photo_adapter_dialog_edit_error_title">Error</string>
    <string name="add_estate_photo_adapter_dialog_edit_error_message">Please, enter a name for the picture.</string>
    <string name="add_estate_photo_adapter_dialog_edit_cancel_button">Cancel</string>
    <string name="add_estate_photo_adapter_dialog_edit_ok_button">OK</string>
    <string name="add_estate_photo_adapter_dialog_delete_title">Delete Photo</string>
    <string name="add_estate_photo_adapter_dialog_delete_message">Are you sure you want to delete this photo?</string>
    <string name="add_estate_photo_adapter_dialog_delete_yes_button">Yes</string>
    <string name="add_estate_photo_adapter_dialog_delete_no_button">No</string>

    <!-- à revoir -->
    <string name="fragment_loan_simulation_storage_permission_error">We need permission to access your storage for selecting images.</string>

    <!-- Dialog Add Photo -->
    <string name="dialog_add_name_of_picture">Name of picture</string>

    <!-- Dialog edit Photo -->
    <string name="dialog_edit_photo_name_new_name_of_picture">New name of picture</string>

    <string name="add_estate_toast_add_property">"You've added a new property with succes"</string>
    <string name="add_estate_toast_update_property">"You've updated a property with succes"</string>

    <!-- DATE PICKER DIALOG -->
    <string name="date_picker_custom_select_date">Select a date</string>
    <string name="date_picker_custom_yes">Yes</string>
    <string name="date_picker_custom_no">No</string>

    <!-- menu bottom -->
    <string name="menu_bottom_mapview">Map</string>
    <string name="menu_bottom_listview">List</string>

    <!-- favorite fragment -->
    <string name="favorite_fragment_name">Favorite fragment</string>

    <!-- home fragment -->
    <string name="home_fragment_name">Home fragment</string>
    <string name="read_external_storage_rationale">Vous n\'avez pas la permissions</string>

    <!-- Loan Simulation Fragment -->
    <string name="fragment_loan_simulation_title">Loan Simulation</string>
    <string name="fragment_loan_simulation_income_hint">Monthly Net Income</string>
    <string name="fragment_loan_simulation_repayment_hint">Desired Monthly Repayment</string>
    <string name="fragment_loan_simulation_interest_rate">Interest rate %</string>
    <string name="fragment_loan_simulation_deposit_hint">Initial Deposit</string>
    <string name="fragment_loan_simulation_loan_term_hint">Loan Term (Years)</string>
    <string name="fragment_loan_simulation_calculate_button">Calculate Loan Capacity</string>
    <string name="fragment_loan_simulation_result_label">"You can borrow "</string>
    <string name="fragment_loan_simulation_result_with_interest_label">"Cost with interest "</string>
    <string name="fragment_loan_simulation_interest_rate_label">Interest Rate : </string>
    <string name="fragment_loan_simulation_loan_capacity_result">This is your result</string>

    <!-- Error Messages -->
    <string name="fragment_loan_simulation_monthly_repayment_error">Monthly repayment cannot exceed 30% of monthly income.</string>

    <!-- Success Message -->
    <string name="fragment_loan_simulation_calculation_success_title">Success</string>
    <string name="fragment_loan_simulation_calculation_success_message">Your loan capacity has been calculated successfully.</string>

    <!-- Fragment Repayment Plan -->
    <string name="fragment_repayment_plan_property_price_hint">Property Price</string>
    <string name="fragment_repayment_plan_loan_term_hint">Loan Term (Years)</string>
    <string name="fragment_repayment_plan_calculate_button">Calculate Repayment</string>
    <string name="fragment_repayment_plan_invalid_input">Property price and loan term must be greater than 0</string>
    <string name="fragment_repayment_plan_result_label">Your monthly payments will be : </string>
    <string name="fragment_repayment_plan_result_with_deposit_label">With your deposit, your monthly payments will be : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_estate_activity_dialog_agent_error_message">You must select an agent before to save</string>


</resources>
