<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_item_photo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_estate_photo_imageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_estate_titlename_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/item_estate_fragment_listview_title_textview"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/item_estate_photo_imageview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_estate_cityname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/item_estate_fragment_listview_cityname_textview"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_estate_photo_imageview"
            app:layout_constraintTop_toBottomOf="@+id/item_estate_titlename_textview" />

        <TextView
            android:id="@+id/item_estate_currency_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_estate_fragment_listview_currency_textview"
            android:textColor="@color/gold"
            android:textSize="30sp"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/item_estate_photo_imageview"
            app:layout_constraintTop_toBottomOf="@+id/item_estate_cityname_textview" />

        <TextView
            android:id="@+id/item_estate_price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/item_estate_fragment_listview_price_textview"
            android:textColor="@color/gold"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_estate_currency_textview"
            app:layout_constraintTop_toBottomOf="@+id/item_estate_cityname_textview" />

        <TextView
            android:id="@+id/item_estate_is_sold_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_estate_fragment_listview_issold_textview"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_estate_currency_textview"
            app:layout_constraintTop_toBottomOf="@+id/item_estate_price_textview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

